--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "got": "^12.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "pipeline": "^0.1.3",
     "request": "^2.88.2"
