--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "acs-2230-final-project",
+  "homepage": "http://energeist.github.io/acs-2230-final-project",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "mocha --exit",
-    "test:serial": "mocha ./test/auth.js && mocha ./test/cats.js && mocha ./test/shelters.js --exit"
+    "test:serial": "mocha ./test/auth.js && mocha ./test/cats.js && mocha ./test/shelters.js --exit",
+    "deploy": "gh-pages -d"
   },
   "author": "Mark Rattle <mark.rattle@gmail.com> (http://www.github.com/energeist)",
   "license": "MIT",
@@ -24,6 +26,7 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   }
